--- a/comp/src/main/webapp/css/app/prod/modal.css
+++ b/comp/src/main/webapp/css/app/prod/modal.css
@@ -12,14 +12,14 @@
 	box-sizing: border-box;
 	background-color: #000;
 	background-color: rgba(0, 0, 0, 0.75);
-	text-align: center
+	text-align: center;
 }
 
 .modal {
 	display: none;
 	vertical-align: middle;
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 	max-width: 1000px; 
 	box-sizing: border-box;
 	width: 100%;
@@ -35,5 +35,5 @@
 	-o-box-shadow: 0 0 10px #000;
 	-ms-box-shadow: 0 0 10px #000;
 	box-shadow: 0 0 10px #000;
-	text-align: left
+	text-align: left;
 }
