--- a/comp/src/main/webapp/css/app/prod/button.css
+++ b/comp/src/main/webapp/css/app/prod/button.css
@@ -15,6 +15,7 @@ button[class*="btn"] {border: 0;}
 }
 .btn.mini, 
 .btn-two.mini {
+  margin-right: 8px;
   padding: 4px 12px;  
   font-size: 12px;
 }
